[FIX] documentation-user: mobile menu button
It was invisible because the doc’s website use material icons rather
then the ‘fa’ ones. Replaced the icon with the material one and styled
the “pressed” state.

--- a/_extensions/odoo/static/style.less
+++ b/_extensions/odoo/static/style.less
@@ -22,6 +22,16 @@
 // The following rules are specific for the documentation website.
 
 .o_main_header {
+
+  .mdi-navigation-menu {
+    padding: 13px;
+  }
+
+  &.o_mobile_menu_opened .mdi-navigation-menu {
+    background-color: @footer-bg-color;
+    color: @gray-lighter;
+  }
+
   .o_sub_nav {
     .collapse .nav {
       margin-right: 0;
